--- a/_config.yml
+++ b/_config.yml
@@ -21,8 +21,8 @@
 title: Site
 email: moko75@hotmail.com
 description: site
-destination: 
-baseurl: "" # the subpath of your site, e.g. /blog
+destination: docs
+baseurl: "/new" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  jekyll
