--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ email: moko75@hotmail.com
 description: site
 destination: docs
 baseurl: "/new" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://mokomolk.github.io/new/" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  jekyll
 
