--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@
 title: Site
 email: moko75@hotmail.com
 description: site
-destination: /docs
+destination: docs
 baseurl: "/new" # the subpath of your site, e.g. /blog
 url: "https://mokomolk.github.io/new/" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
